--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "home",
-  "author": "imsyy",
-  "github": "https://github.com/imsyy/home",
+  "author": "shujing",
+  "github": "https://github.com/shujing-CN/home",
   "home": "https://imsyy.top",
   "private": true,
   "version": "4.1.4",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "vite build",
+    "build": "vite build && copy robots.txt dist\\robots.txt",
     "preview": "vite preview",
     "format": "prettier --write src/",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts,.vue --fix"
