--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "home",
   "author": "shujing",
   "github": "https://github.com/shujing-CN/home",
-  "home": "https://imsyy.top",
+  "home": "https://qzq.asia",
   "private": true,
   "version": "4.1.4",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "vite build && copy robots.txt dist\\robots.txt",
+    "build": "vite build",
+    "copy-robots": "cp robots.txt dist/",
     "preview": "vite preview",
     "format": "prettier --write src/",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts,.vue --fix"
