--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # 站点信息
 VITE_SITE_NAME = "乔子权の主页" # 名称
 VITE_SITE_AUTHOR = "乔子权" # 作者
-VITE_SITE_KEYWORDS = "乔子权,个人主页" # 关键词
+VITE_SITE_KEYWORDS = "乔子权,个人主页,码海探秘" # 关键词
 VITE_SITE_DES = "一个默默无闻的主页" # 站点简介
 VITE_SITE_URL = "qzq.asia" # 站点地址
 VITE_SITE_LOGO = "/images/icon/favicon.ico" # 站点主图标
@@ -35,7 +35,7 @@ VITE_SITE_START = "2024-7-14"
 
 # ICP 备案号
 ## 若不需要，请设为空即可
-VITE_SITE_ICP = ""
+VITE_SITE_ICP = "晋ICP备2024045709号"
 
 # 歌曲 API 地址
 ## 请参照 https://github.com/xizeyoupan/Meting-API#deno-deploy 进行 API 服务部署
